prep for AI player updates